--- a/kotlin/src/main/resources/application.properties
+++ b/kotlin/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=root
+spring.jpa.generate-ddl=true
+spring.jpa.open-in-view=false
