fixed issues in testcases. added missing dockerfiles for kotlin & adapted for pnpm

--- a/typescript/Dockerfile
+++ b/typescript/Dockerfile
@@ -3,6 +3,10 @@ ARG user=docker
 ARG home=/home/$user
 ARG port=3000
 
+ENV PNPM_HOME="/pnpm"
+ENV PATH="$PNPM_HOME:$PATH"
+
+RUN corepack enable
 RUN adduser \
     --disabled-password \
     --gecos "" \
@@ -16,4 +20,4 @@ RUN chown -R $user:$user .
 
 USER $user
 EXPOSE $port
-CMD ["npm", "start"]
+CMD ["pnpm", "start"]
