--- a/kotlin/src/main/resources/application.properties
+++ b/kotlin/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=root
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
 spring.jpa.generate-ddl=true
 spring.jpa.open-in-view=false
+jakarta.persistence.jdbc.url=${DB_URL}
