--- a/kotlin/src/main/resources/application.properties
+++ b/kotlin/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=${DB_URL}
+jakarta.persistence.jdbc.url=${DB_URL}
 spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PW}
 spring.jpa.generate-ddl=true
 spring.jpa.open-in-view=false
-jakarta.persistence.jdbc.url=${DB_URL}
