--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,7 +75,7 @@ node:
 docker-build-kotlin:
   stage: docker
   only: 
-    - main
+    - tags
   services:
     - docker:dind
   before_script:
@@ -92,7 +92,7 @@ docker-build-kotlin:
 docker-build-typescript:
   stage: docker
   only: 
-    - main
+    - tags
   services:
     - docker:dind
   before_script:
