--- a/typescript/package.json
+++ b/typescript/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.3",
     "formik": "^2.4.5",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
